Got the Javadocs building under Java 10.  Along the way, I had to clean up a bunch of bad HTML in package.html files and make the APIDocumentationDoclet tolerate the -html5 option.