@@ -428,6 +428,27 @@
             </dependency>
           </dependencies>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.0.1</version>
+          <configuration>
+            <aggregate>true</aggregate>
+            <linksource>true</linksource>
+            <overview>overview.html</overview>
+            <links>
+              <link>http://download.oracle.com/javase/8/docs/api</link>
+              <link>http://download.oracle.com/javaee/7/api</link>
+              <link>http://junit.org/junit4/javadoc/latest</link>
+              <link>http://docs.oracle.com/javase/8/docs/jdk/api/javadoc/doclet</link>
+              <link>http://www.gwtproject.org/javadoc/latest</link>
+              <link>http://web.cecs.pdx.edu/~whitlock/docs</link>
+            </links>
+            <detectJavaApiLink/>
+            <detectLinks/>
+            <additionalOptions>-html5 --add-modules java.xml.bind</additionalOptions>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -490,24 +511,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.1</version>
-        <configuration>
-          <aggregate>true</aggregate>
-          <linksource>true</linksource>
-          <overview>overview.html</overview>
-          <links>
-            <link>http://download.oracle.com/javase/8/docs/api</link>
-            <link>http://download.oracle.com/javaee/7/api</link>
-            <link>http://junit.org/junit4/javadoc/latest</link>
-            <link>http://docs.oracle.com/javase/8/docs/jdk/api/javadoc/doclet</link>
-            <link>http://www.jajakarta.org/ant/ant-1.6.1/docs/en/manual/api</link>
-            <link>http://www.gwtproject.org/javadoc/latest</link>
-            <link>http://web.cecs.pdx.edu/~whitlock/docs</link>
-          </links>
-          <detectJavaApiLink/>
-          <detectLinks/>
-          <additionalOptions>-html5</additionalOptions>
-        </configuration>
         <reportSets>
           <reportSet>
             <reports>
